adding javafx run options for Windows exported apps